<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".Activities.SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/app_name"
                android:src="@color/gray"
                app:layout_constraintBottom_toTopOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                style="@style/myCustomTextStyleBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="9dp"
                android:text="الاسم بالكامل"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/postnum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />


            <TextView
                android:id="@+id/textView"
                style="@style/myCustomTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/post_counts_txt"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/postnum"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/postnum"
                style="@style/myCustomTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="1dp"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:ignore="RtlHardcoded" />


            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/viewcolor"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postnum" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="#fff"
                android:baselineAligned="true"
                android:showDividers="end"
                android:splitMotionEvents="true"
                android:stretchColumns="0,1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp">

                    <TextView
                        style="@style/myCustomTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="30dp"
                        android:text="@string/notif_txt"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch1"
                        android:layout_width="10dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:button="@drawable/custom_switch"
                        android:checked="true"
                        android:thumb="@null"
                        app:track="@null" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/viewcolor" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp">

                    <TextView
                        style="@style/myCustomTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingRight="30dp"
                        android:text="@string/block_txt"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_block"
                        tools:ignore="RtlHardcoded" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/viewcolor" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp">

                    <TextView
                        style="@style/myCustomTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingRight="30dp"
                        android:text="@string/uses_txt"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_click"
                        tools:ignore="RtlHardcoded" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/viewcolor" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp">

                    <TextView
                        style="@style/myCustomTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingRight="30dp"
                        android:text="@string/about_us_txt"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_about_us"
                        tools:ignore="RtlHardcoded" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/viewcolor" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp">

                    <TextView
                        style="@style/myCustomTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingRight="30dp"
                        android:text="@string/logout_txt"
                        android:textColor="@color/black"
                        android:textSize="11sp"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_log_out"
                        tools:ignore="RtlHardcoded" />

                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/viewcolor" />

            </TableLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>