<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.CreatePostActivity"
    tools:showIn="@layout/activity_create_post">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:weightSum="1"
        android:padding="5dp"
        android:layout_height="50dp">


        <TextView
            android:id="@+id/storename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="0.8"
            android:layout_marginStart="3dp"
            android:text="صفحة اضافة خبر "
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16dp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_weight="0.2"
            android:layout_marginStart="3dp"
            android:text="نشر "
            android:onClick="addPostmethod"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:id="@+id/rlParent"
                android:layout_width="fill_parent"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/userone" />

                <EditText
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/ivProfile"
                    android:layout_toLeftOf="@+id/ivProfile"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="شو الاخبار؟ ..."
                    android:minLines="2"
                    android:padding="5dp"
                    style="@style/myCustomTextStyle"
                    android:singleLine="false"
                    android:textColor="#000000" />


                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/videos_recycler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:layoutDirection="rtl"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/images_recycler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layoutDirection="rtl"
                        android:orientation="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        />

                </LinearLayout>
            </ScrollView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#dfdfdf"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/likelayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:onClick="getImages"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/myCustomTextStyle"
                        android:text="@string/image"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_upload_image"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="#dfdfdf"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:onClick="getVideos"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/myCustomTextStyle"
                        android:text="@string/video"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_upload_video"/>
                </LinearLayout>


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="#dfdfdf" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:onClick="openmap"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/myCustomTextStyle"
                        android:text="@string/place"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_check_in"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>